[gd_scene load_steps=6 format=1]

[ext_resource path="res://PlataformaCai.gd" type="Script" id=1]
[ext_resource path="res://Sprites/tile1.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 31.4295, 10 )

[sub_resource type="Animation" id=3]

resource/name = "Treme"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -14.4343 ), Vector2( 1.35755, -14.4343 ), Vector2( 0, -12.8793 ), Vector2( -1.35755, -14.4343 ) ]
}

[node name="PlataformaCai" type="KinematicBody2D"]

transform/pos = Vector2( 1, 0 )
transform/scale = Vector2( 0.73662, 0.643082 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2.44441, 0, 0, 1.2222, -0.347778, -15.8673 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
queda_tempo = 0.5
respawn = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -0.347778, -15.8673 )
transform/scale = Vector2( 2.44441, 1.2222 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 1.35755, -14.4343 )
transform/scale = Vector2( 1, 0.500333 )
texture = ExtResource( 2 )

[node name="TimerCai" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="TimerRespawn" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Sensor" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 0.485542, -0.397217, -30.5209 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 0

[node name="Shape" type="CollisionShape2D" parent="Sensor"]

transform/pos = Vector2( -0.397217, -30.5209 )
transform/scale = Vector2( 1, 0.485542 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="animCai" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Treme = SubResource( 3 )
playback/active = true
playback/speed = 4.0
blend_times = [  ]
autoplay = ""

[connection signal="timeout" from="TimerCai" to="." method="_on_TimerCai_timeout"]

[connection signal="timeout" from="TimerRespawn" to="." method="_on_TimerRespawn_timeout"]

[connection signal="body_enter" from="Sensor" to="." method="_on_Sensor_body_enter"]

[connection signal="body_exit" from="Sensor" to="." method="_on_Sensor_body_exit"]


